--- a/test.html
+++ b/test.html
@@ -18,10 +18,6 @@
 				height: 800px;
 				overflow: auto;
 			}
-			.thumbnail {
-				width: 50px;
-				height: 50px;
-			}
 		</style>
 	</head>
 	<body>
@@ -33,7 +29,9 @@
 		
 		<script type="text/javascript">
 			$(function() {
-				$('#thumbnail').activeThumbnail();
+				$('#thumbnail').activeThumbnail({
+					color: 'blue'
+				});
 			});
 		</script>
 	</body>
